--- a/css/top-multi.css
+++ b/css/top-multi.css
@@ -85,6 +85,11 @@ section.top-text h2 {
   color: #FFFFFF;
   padding-bottom: 24px;
 }
+section.top-text h2 i {
+  color: #f7a900;
+  font-size: 38px;
+  margin-right: 6px;
+}
 section.top-text h3 {
   color: #fff9db;
   font-size: 21px;
@@ -133,4 +138,187 @@ section.top-text h3 {
 .charts-description {
   font-size: 16px;
   padding-top: 12px;
+}
+.top-product-specification {
+  padding: 30px 0;
+}
+.top-product-specification .content-wrapper {
+  max-width: 800px;
+}
+.top-product-specification p {
+  margin-bottom: 30px;
+  font-size: 16px;
+}
+.top-product-specification p.holder span {
+  float: left;
+  font-size: 50px;
+  line-height: 42px;
+  margin-right: 8px;
+}
+.top-product-block {
+  border: 1px solid #ededed;
+  overflow: hidden;
+  margin-bottom: 30px;
+  background: #FFFFFF;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .12);
+}
+.top-product-block h4 {
+  border-bottom: 1px solid #ededed;
+  padding: 12px 15px;
+  background: #fafafa;
+  font-size: 17px;
+  line-height: 18px;
+}
+.top-product-offers {
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.top-product-offers figure {
+  padding: 0 24px 24px 0;
+  width: 53%;
+}
+.top-product-offers .best-offers {
+  width: 47%;
+}
+.set-top-alert {
+  text-align: right;
+  padding-bottom: 12px;
+}
+.offers-list {
+  border: 3px solid #eeeeee;
+  margin-bottom: 24px;
+}
+.offers-list .top-offer-item {
+  display: flex;
+  border-bottom: 1px solid #eeeeee;
+  line-height: 22px;
+}
+.offers-list .top-offer-item:last-of-type {
+  border-bottom: none
+}
+.top-offer-item a.offer-store {
+  padding: 5px 8px;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+a.offer-store img {
+  margin-right: 4px;
+}
+.top-offer-item .offer-price {
+  font-weight: 700;
+  padding: 5px 10px;
+  background-color: #f5f9f0;
+  text-align: center;
+  min-width: 100px;
+  max-width: 100px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.top-offer-item .offer-price.out-stock {
+  font-size: 11px;
+  color: #ff4136;
+}
+.offers-list .top-offer-item:hover .offer-price {
+  background-color: #FFFFFF;
+}
+.top-offer-item a.button-see-offer {
+  background-color: #ff4136;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 700;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .25);
+  padding: 5px 12px;
+}
+.last-updated {
+  padding: 0 0 12px 0;
+}
+.top-details-content {
+  padding-bottom: 36px;
+}
+.top-details-content h5 {
+  font-size: 21px;
+  margin: 18px 0 12px;
+}
+.top-details-content p {
+  margin-bottom: 12px;
+}
+.top-winner {
+  display: flex;
+  padding: 30px 0;
+}
+.top-winner .winner-image,
+.winner-actions {
+  width: 50%;
+  padding: 12px;
+}
+.winner-actions .suggestion-stores {
+  flex-direction: column !important;
+}
+.winner-actions .suggestion-stores a {
+  margin-bottom: 12px;
+}
+.winner-set-alert {
+  border: 1px solid #eeeeee;
+}
+.winner-set-alert h4 {
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #eeeeee;
+  font-size: 18px;
+  padding: 12px 18px;
+  display: flex;
+  align-items: center;
+}
+.winner-set-alert h4 span {
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  padding: 3px 6px;
+  margin-right: 12px;
+}
+.winner-set-alert h4 span i {
+  color: #ff4136;
+}
+.winner-alert-form {
+  padding: 12px 18px;
+}
+.winner-alert-form form {
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 0;
+}
+.winner-alert-form form label {
+  flex-basis: 33%;
+}
+.winner-alert-form form label input {
+  padding: 9px 10px;
+  color: #444;
+  background: none #fff;
+  border: 1px solid #ccc;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  transition: border-color .4s ease;
+}
+.winner-alert-form form label input:focus {
+  border-color: #444;
+}
+.winner-alert-form form button {
+  flex-basis: 25%;
+  box-shadow: 0 18px 38px 0 rgba(0, 0, 0, .06), 0 8px 40px 0 rgba(0, 0, 0, .06);
+  background-color: #ff4136;
+  color: #FFFFFF;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 17px;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .25);
+  padding: 10px 12px;
+  white-space: nowrap;
+  transition: box-shadow .5s linear, opacity .3s linear;
+}
+.winner-alert-form form button:hover {
+  box-shadow: -1px 6px 13px #d3d3d3;
+  opacity: .9;
 }
