--- a/css/responsive-styles.css
+++ b/css/responsive-styles.css
@@ -182,7 +182,7 @@
   .winner-actions {
     width: 100%;
   }
-  .top-parameter, .deal-score-container {
+  .top-parameter, .item-25 .deal-score-container {
     display: none;
   }
 }
@@ -297,7 +297,7 @@
   .top-versus-holder .item-25.right-side-item {
     display: none;
   }
-  .deal-score-container {
+  .item-25 .deal-score-container {
     display: flex;
   }
   .item-25.center-item {
@@ -486,6 +486,27 @@
   section.top-text h3 {
     padding-right: 12px;
     padding-left: 12px;
+  }
+  .top-versus-holder {
+    flex-direction: column;
+  }
+  .top-versus-holder .item-33 {
+    width: 50%;
+  }
+  .top-versus-holder .item-33.versus-vs {
+    align-self: center;
+  }
+  .top-versus-holder .item-33:last-of-type {
+    align-self: flex-end;
+  }
+  .item-33.versus-vs .vs-slash {
+    top: 12px;
+  }
+  .no-header .top-text .vs-suggestions {
+    flex-wrap: wrap;
+  }
+  .no-header .top-text .vs-suggestions .suggestion-stores {
+    width: 100%;
   }
 }
 
@@ -755,7 +776,7 @@
   .content-links-container a {
     padding: 8px;
   }
-  section.top-text.top-versus {
+  .page-container:not(.no-header) section.top-text.top-versus {
     background: #1f1a21;
   }
   .top-versus-holder {
@@ -776,6 +797,18 @@
   }
   .versus-row .versus-comparing {
     width: 100%;
+  }
+  .why-buy-container {
+    flex-wrap: wrap;
+  }
+  .why-buy-container .why-buy-product {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .why-buy-container .why-buy-product:first-of-type {
+    padding-bottom: 24px;
   }
 }
 
@@ -875,6 +908,16 @@
   }
   .winner-alert-form form button {
     width: 100%;
+  }
+  .top-versus-holder .item-33:first-of-type,
+  .top-versus-holder .item-33:last-of-type {
+    align-items: center;
+    align-self: center;
+    width: 75%;
+    text-align: center;
+  }
+  .top-versus-holder .item-33.versus-vs {
+    margin: 24px 0;
   }
 }
 
